[ADD] Nerd and nature pages are almost completed

--- a/src/components/pages/nature/style.css
+++ b/src/components/pages/nature/style.css
@@ -1,6 +1,6 @@
 .container {
   position: relative;
-  background-image: url("./static/NerdBackground.svg");
+  background-image: url("./static/Background.svg");
   width: 100%;
   border-radius: inherit;
 }
