--- a/src/components/pages/combos/style.module.css
+++ b/src/components/pages/combos/style.module.css
@@ -1,9 +1,13 @@
-
 .container {
-  background-color: white;
+  background-image: url('./static/Background.svg');
   position: relative;
   width: 100%;
+  overflow: scroll;
   border-radius: inherit;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
 
 /* Display Container */
@@ -70,7 +74,7 @@ p {
 
 .title {
   font-size: 23px;
-  margin-block-start:7px ;
+  margin-block-start: 7px;
   margin-block-end: 0;
   line-height: 27px;
   cursor: pointer;
@@ -84,8 +88,8 @@ p {
   margin-block-start: 0;
   margin-block-end: 0;
   padding-right: 20px;
-text-decoration: line-through;
-color:rgb(93, 29, 29)
+  text-decoration: line-through;
+  color: rgb(93, 29, 29);
 }
 
 .price-container {
@@ -95,17 +99,33 @@ color:rgb(93, 29, 29)
   /* justify-content: space-around; */
 }
 
-.arrow-icon{
+.arrow-icon {
   position: absolute;
-  bottom:0;
-  transform:scale(1.5);
-  left:50%;
+  bottom: 0;
+  transform: scale(1.5);
+  left: 50%;
   cursor: pointer;
 }
 
 .customize-link {
-  margin-block-start:0;
+  margin-block-start: 0;
   text-decoration: none;
   font-size: 16px;
 }
 /*  */
+
+.page-title {
+  text-align: center;
+  font-size: 49.7143px;
+  line-height: 58px;
+
+  color: #000000;
+}
+
+.display-title {
+  margin-left: 20px;
+  font-size: 36px;
+  line-height: 42px;
+
+  color: #000000;
+}
