--- a/src/components/generics/ReportComponent/style.css
+++ b/src/components/generics/ReportComponent/style.css
@@ -1,15 +1,38 @@
 .ReportComponent {
-  animation: fadeIn 3s;
+  animation: fadeIn 1.3s;
   position: fixed;
   top: 60px;
   text-align:center;
-  padding-bottom: 10px;
-  width: 300px;
-  height: 40px;
-  background: red;
+  padding:10px;
+  width: 290px;
+  height: auto;
   border: 2px white solid;
   border-radius: 20px;
-  color: white;
+  color: black;
+  font-size: 15px;
+}
+
+.success {
+  background: linear-gradient(226.59deg, #FF0010 10.66%, #FFDC61 93.78%);
+}
+
+.error {
+  background: linear-gradient(226.59deg, #FFDC61 10.66%, #FF0010 93.78%);
+  font-size: 12px;
+}
+
+.btn-close {
+  width: 80px;
+  border-radius: 20px;
+  font-size: 15px;
+  padding: 10px;
+  background: #BF34AF;
+  border: none;
+}
+
+.btn-close:hover {
+  background: #BF34AF;
+  color:black;
 }
 
 @keyframes fadeIn {
@@ -18,16 +41,7 @@
     opacity: 0;
   }
 
-  25% {
-    opacity: 1;
-  }
-
-  75% {
-    opacity: 1;
-  }
-
   100% {
-    opacity: 0;
+    opacity: 1;
   }
-
 }
