--- a/src/components/pages/Register/style.css
+++ b/src/components/pages/Register/style.css
@@ -42,14 +42,9 @@
   outline: none;
 }
 
-.err-message {
-  font-size: 20px;
-  color: red;
-}
-
 .link-login {
   display: flex;
-  background: gainsboro;
+  background: linear-gradient(226.59deg, #FFDC61 10.66%, #FF0010 93.78%);
   color: black;
   text-decoration: none;
   margin: 5%;
@@ -63,7 +58,7 @@
 }
 
 .link-login:hover {
-  background: grey;
+  background: linear-gradient(226.59deg, #FFDC61 10.66%, #FF0010 93.78%);
   color:black;
   transform: scale(1.05);
 }
@@ -76,4 +71,22 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+}
+
+.btn-submit {
+  border-radius: 20px;
+  font-size: medium;
+  padding: 8px 20px;
+  border: none;
+  background: linear-gradient(226.59deg, #FFDC61 10.66%, #FF0010 93.78%);
+}
+
+.btn-submit:hover {
+  background: #FFDC61;
+  color: black
+}
+
+.btn-submit:disabled {
+  background: #FFDC61;
+  color: black
 }
