--- a/src/components/pages/login/style.css
+++ b/src/components/pages/login/style.css
@@ -1,4 +1,4 @@
-.MainLogin {
+/* .MainLogin {
   background: white;
   display: flex;
   align-items: center;
@@ -37,10 +37,6 @@
   border: none;
 }
 
-.input-form:focus {
-  border: none;
-  outline: none;
-}
 
 .err-message {
   font-size: 20px;
@@ -49,7 +45,7 @@
 
 .link-login {
   display: flex;
-  background: gainsboro;
+  background: linear-gradient(226.59deg, #FFDC61 10.66%, #FF0010 93.78%);
   color: black;
   text-decoration: none;
   margin: 5%;
@@ -76,4 +72,4 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-}
+} */
