--- a/src/components/pages/Register/style.css
+++ b/src/components/pages/Register/style.css
@@ -42,7 +42,7 @@
   outline: none;
 }
 
-.link-login {
+.link-redirect {
   display: flex;
   background: linear-gradient(226.59deg, #FFDC61 10.66%, #FF0010 93.78%);
   color: black;
@@ -57,20 +57,10 @@
   padding: 10px 0;
 }
 
-.link-login:hover {
+.link-redirect:hover {
   background: linear-gradient(226.59deg, #FFDC61 10.66%, #FF0010 93.78%);
   color:black;
   transform: scale(1.05);
-}
-
-.nav-login {
-  display: flex;
-  flex-direction: column;
-  height: 80%;
-  width: 100%;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
 }
 
 .btn-submit {
