--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,11 @@
 body{
     font-family: 'Roboto', sans-serif;
 }
+
+* {
+    user-select: none; /* standard syntax */
+    -webkit-user-select: none; /* webkit (safari, chrome) browsers */
+    -moz-user-select: none; /* mozilla browsers */
+    -khtml-user-select: none; /* webkit (konqueror) browsers */
+    -ms-user-select: none; /* IE10+ */
+  }
