Adicionando botao para voltar, e modificando o layout

--- a/src/components/generics/ButtonCheckout/style.css
+++ b/src/components/generics/ButtonCheckout/style.css
@@ -1,16 +1,16 @@
 .btn-checkout {
+  color: white;
   width: 300px;
   border-radius: 20px;
   font-size: 15px;
   padding: 10px;
-  background: linear-gradient(226.59deg, #FFDC61 10.66%, #FF0010 93.78%);
+  background: blueviolet;
   border: none;
 }
 
 .btn-checkout:hover {
-  background: linear-gradient(226.59deg, #FFDC61 10.66%, #FF0010 93.78%);
+  background: #FFDC61;
   color:black;
-  transform: scale(1.05);
 }
 
 .ButtonCheckout {
