--- a/src/components/generics/TreeOfLinks/style.css
+++ b/src/components/generics/TreeOfLinks/style.css
@@ -1,8 +1,8 @@
 
 .link-login {
   display: flex;
-  background: linear-gradient(226.59deg, #FFDC61 10.66%, #FF0010 93.78%);
-  color: black;
+  background: blueviolet;
+  color: white;
   text-decoration: none;
   margin: 5%;
   text-align: center;
@@ -15,9 +15,8 @@
 }
 
 .link-login:hover {
-  background: linear-gradient(226.59deg, #FFDC61 10.66%, #FF0010 93.78%);
+  background: #FFDC61;
   color:black;
-  transform: scale(1.05);
 }
 
 .nav-login {
