--- a/src/components/pages/Payment/style.css
+++ b/src/components/pages/Payment/style.css
@@ -32,7 +32,10 @@
 }
 
 .form-control {
-  background: white;
+  font-size: 16px;
+  margin-top: 3px;
+  padding: 3px 2px 3px 10px;
+  border-radius: 10px;
 }
 
 .btn-form {
