--- a/src/components/pages/combos/style.module.css
+++ b/src/components/pages/combos/style.module.css
@@ -108,6 +108,8 @@ p {
 }
 
 .customize-link {
+  cursor:pointer;
+  color:blue;
   margin-block-start: 0;
   text-decoration: none;
   font-size: 16px;
@@ -118,6 +120,7 @@ p {
   text-align: center;
   font-size: 49.7143px;
   line-height: 58px;
+  margin-block-start: 10px;
 
   color: #000000;
 }
@@ -128,4 +131,9 @@ p {
   line-height: 42px;
 
   color: #000000;
+}
+
+.loading {
+  margin-left: 150px;
+  margin-top: 70px;
 }
