--- a/src/components/pages/customization/style.module.css
+++ b/src/components/pages/customization/style.module.css
@@ -128,3 +128,19 @@ margin-top: 10px;
   margin-left:10px;
   margin-top:10px
 }
+
+.finish-combo{
+  background-color: rgb(253, 72, 52);
+  border: none;
+  border-radius: 5px;
+  padding:2px 3px;
+  cursor: pointer;
+  color:white;
+  right:18px;
+  position:absolute
+}
+
+.finish-combo:hover{
+  background-color: rgb(182, 30, 30);
+
+}
