--- a/src/components/pages/Checkout/style.css
+++ b/src/components/pages/Checkout/style.css
@@ -21,9 +21,14 @@
 
 .FormCheckout {
   display: flex;
-  height: 90%;
+  height: 100%;
   flex-direction: column;
   align-items: center;
+}
+
+.FormCheckout .Form {
+  display: flex;
+  height: 80%;
 }
 
 .form-control {
