--- a/src/components/pages/Revision/style.css
+++ b/src/components/pages/Revision/style.css
@@ -1,4 +1,4 @@
-.Payment {
+.Revision {
   width: 100%;
   height: 100%;
   display: flex;
@@ -7,7 +7,7 @@
   justify-content: center;
 }
 
-.container-payment {
+.container-revision {
   display: flex;
   flex-direction: column;
   align-self: center;
@@ -17,25 +17,6 @@
   height: 600px;
   background: rgba(0, 0, 0, 0.62);
   color: white;
-}
-
-.FormPayment {
-  display: flex;
-  height: 100%;
-  flex-direction: column;
-  align-items: center;
-}
-
-.FormPayment .Form {
-  display: flex;
-  height: 80%;
-}
-
-.form-control {
-  font-size: 16px;
-  margin-top: 3px;
-  padding: 3px 2px 3px 10px;
-  border-radius: 10px;
 }
 
 .btn-form {
