--- a/src/components/generics/ReportComponent/style.css
+++ b/src/components/generics/ReportComponent/style.css
@@ -12,11 +12,11 @@
   font-size: 15px;
 }
 
-.success {
+.ReportComponent .success {
   background: linear-gradient(226.59deg, #FF0010 10.66%, #FFDC61 93.78%);
 }
 
-.error {
+.ReportComponent .error {
   background: linear-gradient(226.59deg, #FFDC61 10.66%, #FF0010 93.78%);
   font-size: 12px;
 }
