--- a/src/components/pages/Review/style.css
+++ b/src/components/pages/Review/style.css
@@ -1,4 +1,4 @@
-.Revision {
+.Review {
   width: 100%;
   height: 100%;
   display: flex;
@@ -7,16 +7,18 @@
   justify-content: center;
 }
 
-.container-revision {
+.container-review {
   display: flex;
   flex-direction: column;
   align-self: center;
   text-align:center;
+  align-items: center;
   border-radius: 20px;
   width: 320px;
   height: 600px;
   background: rgba(0, 0, 0, 0.62);
   color: white;
+  overflow: scroll;
 }
 
 .btn-form {
